--- a/index.html
+++ b/index.html
@@ -18,15 +18,73 @@
 <body>
     <header>
         <div class="logo">
-        <img src="images/logo.png" alt="Logo epicode" width="50%" height="50%">
-    </div>
-    <div class="header">
-        <h1>Corso Web <br> Developer</h1>
-        <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono
-            arricchire il CV, tu pensa ad arricchire le tue competenze
-        </p>
-    </div>
+            <img src="images/logo.png" alt="Logo epicode" width="50%" height="50%">
+        </div>
+        <div class="header">
+            <h2>Corso Web <br> Developer</h2>
+            <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono
+                arricchire il CV, tu pensa ad arricchire le tue competenze.
+            </p>
+            <div class="button">
+                <a href="#finepagina"><button>PARTIAMO!</button></a>
+            </div>
+        </div>
     </header>
+    <main>
+        <article>
+            <div class="article">
+                <h3>Tutti ti cercheranno</h3>
+                <div class="p">
+                    <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli
+                        quella che ti stimola di piu`
+                    </p>
+                </div>
+            </div>
+            <article class="article1">
+                <div>
+                    <h3>Lavora dove vuoi</h3>
+                    <div class="p">
+                        <p>lavora da casa, in riva al mare o in montagna.</p>
+                    </div>
+                </div>
+            </article>
+            <div class="notebook">
+                <img src="images/notebook.jpg" alt="PC">
+            </div>
+        </article>
+        <article class="bottom">
+            <div>
+                <h3>Scegli il tuo ruolo</h3>
+            </div>
+            <div class="p">
+                <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
+            </div>
+            <div>
+                <h3>Lavoro in liberta`</h3>
+            </div>
+            <div class="p">
+                <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali</p>
+            </div>
+        </article>
+        <article class="rosso">
+            <div>
+                <div>
+                    <h4>Epicode garantisce</h4>
+                </div>
+                <div>
+                    <p>"3 mesi intensivi di corso che cambieranno realmente la tua vita"</p>
+                </div>
+                <div>
+                    <p>Mario Rossi</p>
+                </div>
+                <div>
+                    <p>CEO, Epicode</p>
+
+                </div>
+
+            </div>
+        </article>
+    </main>
 </body>
 
 </html>
