--- a/index.html
+++ b/index.html
@@ -68,18 +68,57 @@
         </article>
         <article class="rosso">
             <div>
-                <div>
+                <div class="rossoa">
                     <h4>Epicode garantisce</h4>
                 </div>
-                <div>
-                    <p>"3 mesi intensivi di corso che cambieranno realmente la tua vita"</p>
+                <div class="rossob">
+                    <p><em> "3 mesi intensivi di corso che cambieranno realmente la tua vita"</em></p>
                 </div>
                 <div>
                     <p>Mario Rossi</p>
                 </div>
-                <div>
+                <div class="rossoc">
                     <p>CEO, Epicode</p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="pc-first">
+                <div>
+                    <img src="images/foto1.jpg" alt="pc" width="440px">
+                </div>
+                <div class="titolo">
+                    <h3>Il tuo PC</h3>
+                </div>
+                <div class="p pmid">
+                    <p>Se vuoi diventare developer e` l` unico strumento di cui hai bisogno</p>
+                </div>
+            </div>
+        </article>
+        <article>
+            <div class="pc-second">
+                <div>
+                    <img src="images/foto2.jpg" alt="led" width="440px">
+                </div>
+                <div class="titolo">
+                    <h3>Impara ora</h3>
+                </div>
+                <div class="p pmid">
+                    <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+                </div>
 
+            </div>
+        </article>
+        <article>
+            <div class="pc-second">
+                <div>
+                    <img src="images/foto3.jpg" alt="scrivania" width="440px">
+                </div>
+                <div class="titolo">
+                    <h3>Lavora subito</h3>
+                </div>
+                <div class="p pmid">
+                    <p>Sappiamo cosa vogliono le aziende, perche` lavoriamo con loro.</p>
                 </div>
 
             </div>
