--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <article>
             <div class="pc-first">
                 <div>
-                    <img src="images/foto1.jpg" alt="pc" width="440px">
+                    <img src="images/foto1.jpg" alt="pc" width="100%">
                 </div>
                 <div class="titolo">
                     <h3>Il tuo PC</h3>
@@ -98,7 +98,7 @@
         <article>
             <div class="pc-second">
                 <div>
-                    <img src="images/foto2.jpg" alt="led" width="440px">
+                    <img src="images/foto2.jpg" alt="led" width="100%">
                 </div>
                 <div class="titolo">
                     <h3>Impara ora</h3>
@@ -112,7 +112,7 @@
         <article>
             <div class="pc-second">
                 <div>
-                    <img src="images/foto3.jpg" alt="scrivania" width="440px">
+                    <img src="images/foto3.jpg" alt="scrivania" width="100%" >
                 </div>
                 <div class="titolo">
                     <h3>Lavora subito</h3>
