--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -106,13 +107,12 @@
                 <div class="p pmid">
                     <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
                 </div>
-
             </div>
         </article>
         <article>
             <div class="pc-second">
                 <div>
-                    <img src="images/foto3.jpg" alt="scrivania" width="100%" >
+                    <img src="images/foto3.jpg" alt="scrivania" width="100%">
                 </div>
                 <div class="titolo">
                     <h3>Lavora subito</h3>
@@ -120,10 +120,35 @@
                 <div class="p pmid">
                     <p>Sappiamo cosa vogliono le aziende, perche` lavoriamo con loro.</p>
                 </div>
-
             </div>
         </article>
     </main>
+    <footer class="footer">
+        <div class="footer-a">
+            <h2>Contattaci</h2>
+        </div>
+        <div class="footer-b">
+            <ul class="ul">
+                <li><span class="material-symbols-outlined">
+                    call
+                    </span><a href="tel">(+39) 11223456</a>
+                </li>
+                <li><span class="material-symbols-outlined">
+                    mail
+                    </span><a href="mail">info@epicode.school</a></li>
+                <li><span class="material-symbols-outlined">
+                    north_east
+                    </span>Via Appia 1 - 00100 Roma (RM)</li>
+            </ul>
+        </div>
+        <div class="linea">
+        </div>
+        <div class="copy">
+            <p>&#169;2021. Immagini di <a href="link">Pixabay</a></p>
+
+        </div>
+
+    </footer>
 </body>
 
 </html>
