--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -130,14 +131,14 @@
         <div class="footer-b">
             <ul class="ul">
                 <li><span class="material-symbols-outlined">
-                    call
+                        call
                     </span><a href="tel">(+39) 11223456</a>
                 </li>
                 <li><span class="material-symbols-outlined">
-                    mail
+                        mail
                     </span><a href="mail">info@epicode.school</a></li>
                 <li><span class="material-symbols-outlined">
-                    north_east
+                        north_east
                     </span>Via Appia 1 - 00100 Roma (RM)</li>
             </ul>
         </div>
