--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 arricchire il CV, tu pensa ad arricchire le tue competenze.
             </p>
             <div class="button">
-                <a href="#finepagina"><button>PARTIAMO!</button></a>
+                <a href="#ultima-sezione"><button>PARTIAMO!</button></a>
             </div>
         </div>
     </header>
@@ -144,8 +144,8 @@
         </div>
         <div class="linea">
         </div>
-        <div class="copy">
-            <p>&#169;2021. Immagini di <a href="link">Pixabay</a></p>
+        <div class="copy" id="ultima-sezione">
+            <p>&#169;2021. Immagini di <a href="finepagina">Pixabay</a></p>
 
         </div>
 
