--- a/indexdesktop.html
+++ b/indexdesktop.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/styledesktop.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo.png" alt="Logo epicode" width="50%" height="50%">
+            <img src="images/logo.png" alt="Logo epicode" width="15%" height="35%">
         </div>
         <div class="header">
             <h2>Corso Web <br> Developer</h2>
