--- a/indexdesktop.html
+++ b/indexdesktop.html
@@ -23,7 +23,7 @@
             <img src="images/logo.png" alt="Logo epicode" width="15%" height="35%">
         </div>
         <div class="header">
-            <h2>Corso Web <br> Developer</h2>
+            <h2>Corso Web Developer</h2>
             <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono
                 arricchire il CV, tu pensa ad arricchire le tue competenze.
             </p>
@@ -33,7 +33,12 @@
         </div>
     </header>
     <main>
-        <article>
+        <div class="blocka">
+                <div class="notebook">
+                    <img src="images/notebook.jpg" alt="PC">
+                </div>
+        </div>
+        <div class="blockb">
             <div class="article">
                 <h3>Tutti ti cercheranno</h3>
                 <div class="p">
@@ -50,24 +55,22 @@
                     </div>
                 </div>
             </article>
-            <div class="notebook">
-                <img src="images/notebook.jpg" alt="PC">
-            </div>
-        </article>
-        <article class="bottom">
-            <div>
-                <h3>Scegli il tuo ruolo</h3>
-            </div>
-            <div class="p">
-                <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
-            </div>
-            <div>
-                <h3>Lavoro in liberta`</h3>
-            </div>
-            <div class="p">
-                <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali</p>
-            </div>
-        </article>
+            <article class="bottom">
+                <div>
+                    <h3>Scegli il tuo ruolo</h3>
+                </div>
+                <div class="p">
+                    <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
+                </div>
+                <div>
+                    <h3>Lavoro in liberta`</h3>
+                </div>
+                <div class="p">
+                    <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali</p>
+                </div>
+            </article>
+        </div>
+
         <article class="rosso">
             <div>
                 <div class="rossoa">
